--- a/package.json
+++ b/package.json
@@ -5,23 +5,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:server": "npx tsc --project server/tsconfig.json",
+    "run:server": "nodemon -q server/dist/server/index.js",
+    "server": "concurrently \"npx tsc --project server/tsconfig.json --watch\" \"nodemon -q server/dist/server/index.js\""
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^3.9.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.39.0",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
     "autoprefixer": "^10.4.2",
+    "concurrently": "^7.2.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
+    "nodemon": "^2.0.16",
     "postcss": "^8.4.6",
     "prettier": "2.5.1",
     "prisma": "^3.9.2",
